some layout and stylign done

--- a/index.html
+++ b/index.html
@@ -6,12 +6,41 @@
     <title>Scrum Calendar App</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="main.css" rel="stylesheet" type="text/css">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+    <div class="main-content-header">
+        <h1 class="main-content-title">
+            Scrum Calendar App
+        </h1>
+        <span class="content-title-number">
+            Scrum: 3
+        </span>
+    </div>
     <div class="main-content-container">
-        bing
+        <ul class="main-content-list">
+            <li class="content-list-item">
+                <span class="sprint-tag">Start</span>
+                M
+            </li>
+            <li class="content-list-item">T</li>
+            <li class="content-list-item">W</li>
+            <li class="content-list-item">T</li>
+            <li class="content-list-item">F</li>
+
+            <li class="content-list-item"></li>
+            <li class="content-list-item"></li>
+
+            <li class="content-list-item current-item">M</li>
+            <li class="content-list-item">T</li>
+            <li class="content-list-item">W</li>
+            <li class="content-list-item">T</li>
+            <li class="content-list-item">
+                F
+                <span class="sprint-tag">End</span>
+            </li>
+        </ul>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
